--- a/파이썬_1주차.ipynb
+++ b/파이썬_1주차.ipynb
@@ -1351,14 +1351,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "EthVObU0Zesj"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "385543.28942953143\n"
+          ]
+        }
+      ],
       "source": [
         "# Write Your Code\n",
-        "\n"
+        "FV = 1000000\n",
+        "r = 0.1\n",
+        "n = 10\n",
+        "Present_Value = FV / (1+r)**n\n",
+        "print(Present_Value)"
       ]
     },
     {
@@ -1380,14 +1392,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 70,
+      "execution_count": 4,
       "metadata": {
         "id": "QCcuEzDIZMWB"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "2240.0645821442704\n"
+          ]
+        }
+      ],
       "source": [
         "# Write Your Code\n",
-        "\n"
+        "def calculate_PV(FV, r, n):\n",
+        "    PV = FV / (1+r)**n\n",
+        "    return PV\n",
+        "\n",
+        "T_0 = calculate_PV(-10000, 0.05, 0)\n",
+        "T_1 = calculate_PV(3000, 0.05, 1)\n",
+        "T_2 = calculate_PV(2000, 0.05, 2)\n",
+        "T_3 = calculate_PV(4000, 0.05, 3)\n",
+        "T_4 = calculate_PV(5000, 0.05, 4)\n",
+        "print(T_0+T_1+T_2+T_3+T_4)\n"
       ]
     },
     {
@@ -1410,14 +1439,34 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "P8587Cm7dcP4"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "1.7500\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write Your Code\n"
+        "# Write Your Code\n",
+        "Rp = 0.1\n",
+        "Rf = 0.03\n",
+        "sigma_p = 0.04\n",
+        "Sharpe_Ratio = (Rp-Rf) / sigma_p\n",
+        "print(\"%0.4f\" %Sharpe_Ratio)\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
     }
   ],
   "metadata": {
