JungGW (first_commit)

--- a/파이썬_2주차.ipynb
+++ b/파이썬_2주차.ipynb
@@ -1132,11 +1132,77 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "2\n",
+            "5\n",
+            "7\n",
+            "17\n",
+            "7\n"
+          ]
+        }
+      ],
       "source": [
-        "# [10950] 풀이 코드 작성"
+        "# [10950] 풀이 코드 작성\n",
+        "T = int(input())\n",
+        "for i in range(T):\n",
+        "    A,B = map(int,input().split())\n",
+        "    print(A+B)\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 3,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "6\n"
+          ]
+        }
+      ],
+      "source": [
+        "# [8393] 풀이 코드 작성\n",
+        "n = int(input())\n",
+        "sum = 0\n",
+        "for i in range(n+1):\n",
+        "    sum += i\n",
+        "print(sum)\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 4,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "A\n"
+          ]
+        }
+      ],
+      "source": [
+        "# [9498] 풀이 코드 작성\n",
+        "score = int(input())\n",
+        "if 89<score<=100:\n",
+        "    print(\"A\")\n",
+        "elif 79<score<90:\n",
+        "    print(\"B\")\n",
+        "elif 69<score<80:\n",
+        "    print(\"C\")\n",
+        "elif 59<score<70:\n",
+        "    print(\"D\")\n",
+        "else:\n",
+        "    print(\"F\")"
       ]
     },
     {
@@ -1144,18 +1210,7 @@
       "execution_count": null,
       "metadata": {},
       "outputs": [],
-      "source": [
-        "# [8393] 풀이 코드 작성"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "# [9498] 풀이 코드 작성"
-      ]
+      "source": []
     }
   ],
   "metadata": {
