first_commit(JGW)

--- a/파이썬_3주차.ipynb
+++ b/파이썬_3주차.ipynb
@@ -800,20 +800,54 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": 3,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "10"
+            ]
+          },
+          "execution_count": 3,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
-        "# [15596] 풀이 과정"
+        "# [15596] 풀이 과정\n",
+        "\n",
+        "def sum_of_list (a):\n",
+        "    result = 0\n",
+        "    for i in range(len(a)):\n",
+        "        result += a[i]\n",
+        "    return result\n",
+        "\n",
+        "sum_of_list([1,2,3,4])\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 4,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "15\n"
+          ]
+        }
+      ],
       "source": [
-        "# [4673] 풀이 과정"
+        "# [4673] 풀이 과정\n",
+        "def d(n):\n",
+        "    result = n\n",
+        "    a = map(int, str(n))\n",
+        "    result += sum(a)\n",
+        "    return result\n",
+        "\n",
+        "print(d(12))"
       ]
     },
     {
@@ -821,7 +855,9 @@
       "execution_count": null,
       "metadata": {},
       "outputs": [],
-      "source": []
+      "source": [
+        "\"\"\"대명햄.. 생각을 더 해봐야할거 같아.. 3주차 4주차 조만간 다시 다 올릴게유...미안해유..\"\"\""
+      ]
     }
   ],
   "metadata": {
